--- a/gr-qc-0010055/bh-evaporation-notes.tex
+++ b/gr-qc-0010055/bh-evaporation-notes.tex
@@ -162,26 +162,13 @@ theorems in general relativity.
 
 \setcounter{equation}{0}
 
+\newpage
 
+\tableofcontents
 
-\noindent{\large\bf Table of Contents}
-\vskip 0.05in
+\newpage
 
-1. {\it Introduction}
-
-2. {\it Quantum Fields in Curved Spacetimes}
-
-3. {\it Accelerating Observers in Flat Spacetime}
-
-4. {\it Black Holes}
-
-5. {\it Particle Emission from Black Holes}
-
-6. {\it Extended Schwarzchild and Reissner-Nordstrom-deSitter Spacetimes}
-
-7. {\it Black Hole Evaporation and Positive Mass Theorems}
-
-\section{Introduction}
+\sectiono{Introduction}
 
 Stephen Hawking published his paper ``Particle Creation by Black Holes"
 \cite{hawking} in 1975.  In this article, Hawking demonstrated that classical black
@@ -316,7 +303,7 @@ one takes into
 account the quantum mechanical nature of matter fields in the spacetime.
 
 
-\section{Quantum Fields in Curved Spacetimes}
+\sectiono{Quantum Fields in Curved Spacetimes}
 \label{qftcs}
 
 \vskip 0.1in\noindent
@@ -564,7 +551,7 @@ particles.
 These choices are the physics input and are determined by what questions
 one wants to answer!
 
-\section{Accelerating Observers in Flat Spacetime}
+\sectiono{Accelerating Observers in Flat Spacetime}
 
 Consider an  observer in flat, Minkowski spacetime who undergoes
 constant acceleration, {\it i.e.} the magnitude of his four-acceleration is
@@ -799,7 +786,7 @@ which is a black body or thermal spectrum, with temperature
 \be\label{rintemp}T=\hbar {a\over 2\pi}.\ee
 %
 
-\section{Black Holes}
+\sectiono{Black Holes}
 \label{section4}
 
 A stationary black hole spacetime\begin{footnote}
@@ -915,7 +902,7 @@ space of states. For notational simplicity, as in section (\ref{qftcs}), we will
 supress the $l,m$
 subscripts in the following calculations.
 
-\section{Particle Emission from Black Holes}
+\sectiono{Particle Emission from Black Holes}
 
 Our strategy will be to first present Hawking's original calculation of
 particle production,
@@ -1335,7 +1322,7 @@ We will return to this picture in connection with the positive mass
 theorems for black
 holes, and quantum mechanical ground states in  string theory in section (\ref{s7}).
 
-\section{Extended Schwarzchild and Reissner-Nordstrom\\ deSitter Spacetimes}
+\sectiono{Extended Schwarzchild and Reissner-Nordstrom\\ deSitter Spacetimes}
 \label{section6}
 
 \vskip 0.1in\noindent
@@ -1567,7 +1554,7 @@ be evaluated in the stationary phase approximation. One finds that
 the coefficients $\awwp$ approach those for a Schwarzschild black hole in
 this limit.
 
-\section{Black Hole Evaporation and Positive Mass Theorems}
+\sectiono{Black Hole Evaporation and Positive Mass Theorems}
 \label{s7}
 
 We close  by pointing out a connection, between classical
