--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-08-04 07:39:53 -0400 
+%% Created for Pete Su at 2024-08-04 11:17:30 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Barman2018,
+	author = {Barman, Subhajit and Hossain, Golam Mortuza and Singha, Chiranjeeb},
+	date-added = {2024-08-04 11:16:58 -0400},
+	date-modified = {2024-08-04 11:17:26 -0400},
+	doi = {10.1103/physrevd.97.025016},
+	issn = {2470-0029},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/1707.03614v1}{arxiv:1707.03614}},
+	number = {2},
+	publisher = {American Physical Society (APS)},
+	title = {Exact derivation of the Hawking effect in canonical formulation},
+	url = {http://dx.doi.org/10.1103/physrevd.97.025016},
+	volume = {97},
+	year = {2018},
+	bdsk-url-1 = {http://dx.doi.org/10.1103/physrevd.97.025016}}
 
 @article{Page2005,
 	author = {Page, Don N},
