--- a/1409.1231v5/jerusalemarxivv5.tex
+++ b/1409.1231v5/jerusalemarxivv5.tex
@@ -590,7 +590,7 @@ Let's now focus on a black hole created from the collapse of a matter; the Penro
  
 The mode solutions we discussed in the previous section now only apply above the shell.  Below the shell they must be matched onto solutions of the ordinary Minkowski wave equation such as plane waves.  This matching will be nontrivial;  since there is no global time-translation symmetry, positive frequency modes with respect to Schwarzschild time above the shell will evolve back to mixtures of positive and negative frequency modes with respect to the Minkowski time below the shell.  In fact the negative frequency part comes entirely from the part of the solution that propagates back through the photon shell; the part that reflects off of the barrier while still in the Schwarzschild region will conserve energy and stay positive-frequency.  
 
-We then define the quantum state in such a way that other than the shell which created the black hole, at early times the Minkowski modes below the shell are not excited.  In other words their annihilation operators will annihilate the state.  Because of the mixing between positive and negative frequency just described, the modes which are positive frequency in the Schwarzschild region \textit{will} be excited in this state.  To figure out how much one needs to figure out how to relate the creation and annihilation operators for the Minkowski modes below the shell to the creation and annihilation operators for the Schwarzshild modes above the shell.  The details are not hard but are slightly technical; they are beautifully explained in Hawking's original paper \cite{Hawking:1974sw} (and nicely reviewed in \cite{Wald:1984rg}), and I will not go through them here since there is a simpler way of getting to the final answer.  The idea is to simply guess the state of the ingoing and outgoing modes to the future of the blue shell in figure \ref{collapse2} without worrying about what happened earlier (the fact that the œanswer doesn't depend on what happened earlier is a warning sign, which we will return to soon).  
+We then define the quantum state in such a way that other than the shell which created the black hole, at early times the Minkowski modes below the shell are not excited.  In other words their annihilation operators will annihilate the state.  Because of the mixing between positive and negative frequency just described, the modes which are positive frequency in the Schwarzschild region \textit{will} be excited in this state.  To figure out how much one needs to figure out how to relate the creation and annihilation operators for the Minkowski modes below the shell to the creation and annihilation operators for the Schwarzshild modes above the shell.  The details are not hard but are slightly technical; they are beautifully explained in Hawking's original paper \cite{Hawking:1974sw} (and nicely reviewed in \cite{Wald:1984rg}), and I will not go through them here since there is a simpler way of getting to the final answer.  The idea is to simply guess the state of the ingoing and outgoing modes to the future of the blue shell in figure \ref{collapse2} without worrying about what happened earlier (the fact that the answer doesn't depend on what happened earlier is a warning sign, which we will return to soon).  
 
 Indeed the state of the ingoing modes (the scattering states which are incident from the right in figure \ref{schscat}) at late times just describes any matter which is happens to be falling in, so if there is no such matter then these should be in their ground states.  The outgoing modes at the horizon however (the scattering states which are incident from the left in figure \ref{schscat}) must be thermally entangled across the horizon with their interior Rindler partners at the Hawking temperature $T_{\mathit{Hawking}}$, just as they would be in the Hartle-Hawking state, since otherwise there would be a large energy density at the horizon.  Thus the state of the exterior modes (which we can think of as the ``initial state'' for the scattering problem in figure \ref{schscat}) is
 \be\label{BHmodestate}
