--- a/gr-qc-0010055/bh-evaporation-notes.tex
+++ b/gr-qc-0010055/bh-evaporation-notes.tex
@@ -1047,7 +1047,7 @@ backscatters
 off the  curved geometry, {\it i.e.} due to the potential $W(r)$ in
 (\ref{waveschw}), and propagates
 out to $\finf\!$, essentially without a change of frequency.
-The remaining fraction $\Gamma _{\omega}$ propagates parallel to $\ph$ and
+The remaining fraction $\Gamma _{\omega}$ propagates parallel to $\ph$ (Figure \ref{f3}) and
 is absorbed by the black hole horizon. It is this second portion
 that leads to the particle production.  Therefore, we can write
 $\f=\f{}^{(1)}+\f{}^{(2)}$,
