--- a/1910.13487/bogo.tex
+++ b/1910.13487/bogo.tex
@@ -1,9 +1,56 @@
-\documentclass[12pt,draft]{article}
+\documentclass[12pt]{article}
 
 %%%%%%%%%%%%%%%% input packages
 \usepackage{mathrsfs,bm,color,sasaki,braket}
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage{comment}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 %\usepackage{mathabx}   % use for symbol of Cartesian product ``X''
 
@@ -13,8 +60,6 @@
 %\definecolor{labelkey}{rgb}{0.98,0.6,0.8}
 
 %%%%%%%%%% Change spaces
-\usepackage[a4paper]{geometry}
-\newgeometry{left=30mm,right=30mm,bottom=32mm,top=32mm}
 
 %%%%%%%%%%%%%%%% Theorems
 \theoremstyle{plain}
@@ -45,7 +90,7 @@
         Kyosuke Usami\thanks{Department of Mathematics, Shinshu University, Matsumoto 390-8621, Japan,
         e-mail: 19SS101F@shinshu-u.ac.jp}
 }
-\date{\today}
+\date{4 Nov 2020}
 %%%%%%%%%%%%%%%% end title 
 
 
@@ -70,7 +115,9 @@ Our method systematically diagonalizes various models of quantum field theory,
 \end{abstract}
 %%%%%%%%%%%%%%%% end abst
 
+\newpage
 \tableofcontents % 目次
+\newpage
 
 %%%%%%%%%%%%%%%% begin introduction
 \section{Introduction}\label{intro}
