--- a/1910.13487/bogo.tex
+++ b/1910.13487/bogo.tex
@@ -225,8 +225,8 @@ $\Psi^{(n)}\in \stensor^n \sH$.
 %The creation and annihilation operators are fundamental objects on the boson Fock space.
 The standard creation operator $A^*(f)$ for $f\in\sH$ is defined by
 \begin{align*}
-& \dom(A^*(f)) := \left\{\Psi=(\Psi^{(n)})_{n=0}^\infty \in \Fb(\sH) ~\bigg|~ \sum_{n=0}^\infty n\norm{S_n(f\tensor\Psi^{(n-1)})}^2<\infty\right\} \\
-& (A^*(f)\Psi)^{(n)} := \sqrt{n}S_n(f\tensor \Psi^{(n-1)}), \qquad n=1,2,3,\cdots,
+\dom(A^*(f)) & := \left\{\Psi=(\Psi^{(n)})_{n=0}^\infty \in \Fb(\sH) ~\bigg|~ \sum_{n=0}^\infty n\norm{S_n(f\tensor\Psi^{(n-1)})}^2<\infty\right\} \\
+(A^*(f)\Psi)^{(n)} & := \sqrt{n}S_n(f\tensor \Psi^{(n-1)}), \qquad n=1,2,3,\cdots,
 \end{align*}
 and $(A^*(f)\Psi)^{(0)}:=0$.
 Here, $S_n$ is the symmetrization operator, which is an orthogonal projection from $\otimes^n \sH$ onto $\otimes_{\rm s}^n \sH$.
@@ -389,11 +389,11 @@ we obtain
  U \left( \frac{B(f)+B^*(f)}{\sqrt{2}}\right) U^* = \frac{A(f)+A^*(f)}{\sqrt{2}},
 \]
 whence
-\[
- U\phi(f)|_{\Ffin(\sH)}U^* 
+\begin{multline*}
+ U\phi(f)|_{\Ffin(\sH)}U^* \\
  = U\left(\frac{B(f)+B^*(f)}{\sqrt{2}}\right)\Big|_{\Ffin(\sH)}U^*
    \subset \frac{A(f)+A^*(f)}{\sqrt{2}} \subset \PhiS(f).
-\]
+\end{multline*}
 By taking the closure of both sides, we get the desired result.
 \end{proof}
 %%%%%%%%%%%%%%%% end
@@ -502,13 +502,13 @@ Since $S$ is non-negative, for any orthonormal basis $\{e_n\}_n\subset \dom(S)$,
  = \sum_{n=1}^\infty \norm{A(S^{1/2}e_n)U\Omega}^2. \label{conv001}
 \end{align}
 By the definition of $U$, we get
-\begin{align*}
+\begin{multline*}
  \norm{A(S^{1/2}e_n)U\Omega}
 = \norm{B(S^{1/2}e_n)\Omega}
- = \norm{A^*(JYS^{1/2}e_n)\Omega}
+ = \norm{A^*(JYS^{1/2}e_n)\Omega}\\
  = \norm{JYS^{1/2}e_n}
 = \norm{YS^{1/2}e_n}.
-\end{align*}
+\end{multline*}
 Since the right-hand side of \eqref{conv001} converges, so does $\sum_{n}\norm{YS^{1/2}e_n}^2$.
 Thus, $\overline{YS^{1/2}}$ is Hilbert-Schmidt and 
 \begin{align*}
@@ -826,9 +826,10 @@ Take an orthonormal basis $\{e_n\}_n$ of $\sH$ and a sequence $\{\lambda_n\}_n$ 
 \]
 
 \textbf{Step 1.} It follows that
-\[
- \langle h,(T^2+t^2)^{-1}h-(S^2+t^2)^{-1}h\rangle = \sum_n\lambda_n\langle h,T(T^2+t^2)^{-1}e_n\rangle\langle S(S^2+t^2)^{-1}\overline{S^{-1}T}e_n,h\rangle
-\]
+\begin{multline*}
+ \langle h,(T^2+t^2)^{-1}h-(S^2+t^2)^{-1}h\rangle = \\
+ \sum_n\lambda_n\langle h,T(T^2+t^2)^{-1}e_n\rangle\langle S(S^2+t^2)^{-1}\overline{S^{-1}T}e_n,h\rangle
+\end{multline*}
 for all $h\in\sH$ and $t\in\RR_{>0}$. To see this, note that
 \[
  (T^2+t^2)^{-1}h = (T^2+t^2)^{-1}(S^2+t^2)(S^2+t^2)^{-1}h,
@@ -1741,7 +1742,8 @@ with some constant $C$ independent of $\{e_n\}_n$ and $\{f_n\}_n$ (see \cite[Pro
 By \eqref{TSTT} and the definition of $W$, we have
 \begin{align*}
 & \sum_{n} \Big| \inner{e_n}{\overline{T^p(S-T)T^q}f_n} \Big| \\
-&\leq \frac{2}{\pi} \sum_{m} | \lambda_m | \int_0^\infty  \sum_{n} \Big| \inner{e_n}{T^p(T^2+t^2)^{-1}T^{1/2}g_m} \! \inner{S^qT^{1/2}g_m}{(S^2+t^2)^{-1}\overline{S^{-q}T^q}f_n} \Big| t^2 dt \\
+&\leq \frac{2}{\pi} \sum_{m} | \lambda_m | \int_0^\infty  \sum_{n} \Big| \inner{e_n}{T^p(T^2+t^2)^{-1}T^{1/2}g_m} \\ 
+& \quad \inner{S^qT^{1/2}g_m}{(S^2+t^2)^{-1}\overline{S^{-q}T^q}f_n} \Big| t^2 dt \\
 &\leq \frac{2}{\pi} \sum_{m} | \lambda_m | \int_0^\infty \norm{T^{p+1/2}(T^2+t^2)^{-1} g_m} \norm{T^qS^{-q}} \norm{(S^2+t^2)^{-1}S^qT^{1/2}g_m} t^2 dt \\
 &\leq \frac{2}{\pi} \norm{T^qS^{-q}} \sum_{m} | \lambda_m | \bigg( \int_0^\infty  \norm{T^{p+1/2}(T^2+t^2)^{-1} g_m}^2 t^2dt \bigg)^{1/2} \\
 &\qquad \times      \bigg( \int_0^\infty \norm{(S^2+t^2)^{-1}S^q T^{1/2}g_m}^2 t^2 dt  \bigg)^{1/2} \\
@@ -2672,10 +2674,10 @@ holds.
 Since any self-adjoint operator $T$ is unitarily equivalent to a multiplication operator on an $L^2$-space,
 it is enough to prove the lemma in the case of $\sH=L^2(M)$, $T=Q$.
 By Lemma \ref{ak1}, for $\Psi\in\dom(\dGb(T)^{n/2})$ and $\Phi\in\Fbz$, we have
-\begin{align*}
+\begin{multline*}
  \inner{A^*(f_1)\cdots A^*(f_n)\Phi}{\Psi}
-& =  \int_{M^n}  \overline{f_1(k_1)}\cdots \overline{f_n(k_n)} \inner{\Phi}{A(k_1)\cdots A(k_n)\Psi}\,d\mu(k_1)\cdots d\mu(k_n).
-\end{align*}
+=  \int_{M^n}  \overline{f_1(k_1)}\cdots \overline{f_n(k_n)} \inner{\Phi}{A(k_1)\cdots A(k_n)\Psi}\\d\mu(k_1) \cdots d\mu(k_n).
+\end{multline*}
 We set $\norm{\Phi}=1$, $f_j:=f_j(k_j)$, $Q_j^{1/2}:=Q(k_j)^{1/2}$ and $d\mu:=d\mu(k_1)\cdots d\mu(k_n)$.  
 Then we have
 \begin{align*}
@@ -2717,10 +2719,10 @@ and, for $n\geq 2$, we have
 & = \norm{\dGb(Q)^{n/2}\Psi} ^2 < \infty.
 \end{align*}
 Hence, for all $\Phi\in\Fbz$ and $\Psi\in\dom(\dGb(Q)^{n/2})$, it holds that 
-\begin{align*}
+\begin{multline*}
   |\inner{A^*(f_1)\cdots A^*(f_j)\Phi}{\Psi}|
- \leq \prod_{\ell=1}^j \norm{Q^{-1/2}f_\ell} \cdot \norm{\Phi}\cdot \norm{\dGb(Q)^{j/2}\Psi},\qquad j=1,2,\cdots,n.
-\end{align*}
+ \leq \prod_{\ell=1}^j \norm{Q^{-1/2}f_\ell} \cdot \norm{\Phi}\cdot \norm{\dGb(Q)^{j/2}\Psi},\\ j=1,2,\cdots,n.
+\end{multline*}
 Since $\Fbz$ is a core for $A(f)$, by setting $j=1$ in the above inequality, we have $\Psi\in\dom(A(f_1))$.
 Next, by setting $j=2$, one has $A(f_1)\Psi \in\dom(A(f_2))$.
 Therefore $\Psi\in \dom(A(f_n)\cdots A(f_1))$ follows by induction.
