--- a/2112.02444/CPP3r.tex
+++ b/2112.02444/CPP3r.tex
@@ -105,7 +105,7 @@ absorb energy from the background. This will play a key role in cosmological par
 
 The outline of this review is as follows: The formalism of field quantization in a curved spacetime is reviewed in
 Sec.~\ref{sec:quantization}, and the mathematical tools needed to describe quantum particle creation will be developed
-in Sec.~\ref{sec:particle-creation}. This will include Bogolubov transformations, and a discussion of some exactly
+in Sec.~\ref{sec:particle-creation}. This will include Bogoliubov transformations, and a discussion of some exactly
 soluble models, as well as of a perturbative approximation method. Some estimates of particle creation rate will be
 discussed. Section~\ref{sec:state-entropy} will treat the quantum state of the created particles, and discuss decoherence
 and entropy production. The implications of quantum particle creation for inflationary cosmology, and for subsequent epochs
@@ -266,8 +266,8 @@ now discuss.
 \label{sec:particle-creation}
 
 
-\subsection{Bogolubov Transformations}
-\label{sec:Bogolubov}
+\subsection{Bogoliubov Transformations}
+\label{sec:Bogoliubov}
 
     Let us consider a spacetime which is asymptotically flat in the past
 and in the future, but which is non-flat in the intermediate region.
@@ -275,11 +275,14 @@ Let $\{ f_j \}$ be positive frequency solutions in the past (the
 ``in-region''), and let $\{ F_j \}$ be positive frequency solutions in 
 the future (the ``out-region'').  We may choose these sets of solutions
 to be orthonormal, so that
-\begin{eqnarray}
-&(f_j,f_{j'})= (F_{j},F_{j'})=\delta _{jj'}& \nonumber \\
-&(f_j^*,f_{j'}^*)= (F_{j}^*,F_{j'}^*)= -\delta _{jj'}& \nonumber \\
-&(f_j,f_{j'}^*)= (F_{j},F_{j'}^*)= 0.&  \label{eq:ortho}
-\end{eqnarray}
+\begin{equation}
+\begin{aligned}
+(f_j,f_{j'})&= (F_{j},F_{j'})=\delta _{jj'}& \\
+(f_j^*,f_{j'}^*)& = (F_{j}^*,F_{j'}^*)= -\delta _{jj'}& \nonumber \\
+(f_j,f_{j'}^*)& = (F_{j},F_{j'}^*)= 0. \\
+\end{aligned}
+\label{eq:ortho}
+\end{equation}
 Although these functions are defined by their asymptotic properties in
 different regions, they are solutions of the wave equation everywhere
 in the spacetime. We may expand the in-modes in terms of the out-modes:
@@ -327,8 +330,8 @@ or
 b_k=\sum\limits_j (\alpha _{jk} a_j + \beta _{jk}^* a _j^\dagger).
                                        \label{eq:Bogo2}
 \end{equation}
-This is a Bogolubov transformation, and the $\alpha_{jk}$ and
-$\beta_{jk}$ are called the Bogolubov coefficients.
+This is a Bogoliubov transformation, and the $\alpha_{jk}$ and
+$\beta_{jk}$ are called the Bogoliubov coefficients.
 
    Now we are ready to describe the physical phenomenon of particle
 creation by a time-dependent gravitational field. Let us assume that
@@ -443,7 +446,7 @@ for some constants $\alpha_k$ and $\beta_k$. This leads to the relation
  \begin{equation}
  f_{\bf k}({\bf x},\eta)= \alpha_k\,  F_{\bf k}({\bf x},\eta) + \beta_k \, F^*_{\bf k}({\bf x},\eta) \,.
  \end{equation}
-This is just Eq.~\eqref{eq:in-out}, where  the Bogolubov coefficients are given 
+This is just Eq.~\eqref{eq:in-out}, where  the Bogoliubov coefficients are given 
 by $\alpha_{\bf k k'} = \alpha_k \delta_{\bf k k'}$ and $\beta_{\bf k k'} = \beta_k \delta_{\bf k, -k'}$.
 The condition Eq.~\eqref{eq:alphabeta} becomes
  \begin{equation}
@@ -451,7 +454,7 @@ The condition Eq.~\eqref{eq:alphabeta} becomes
  \label{eq:alphabeta2}
  \end{equation}
  and the mean number of particles created in a given mode, from Eq.~\eqref{eq:N}, is now $\langle N_k \rangle =  |\beta_k|^2$.
- The simple forms of the Bogolubov coefficients in a spatially flat universe follow from the spatial
+ The simple forms of the Bogoliubov coefficients in a spatially flat universe follow from the spatial
  translation symmetry of the metric, Eq.~\eqref{eq:metric}. This means that three-momentum is conserved,
  even though energy is no longer conserved on a time-dependent background.  Indeed, it is the lack of energy conservarion 
  which allows particle creation from the vacuum in an expanding universe. It also allows other processes which are forbidden
@@ -666,9 +669,9 @@ which is the same as Eq.~\eqref{eq:chieq-BD} if we make the substitutions
  k \rightarrow 0\,, \quad m\rightarrow k\, \quad a_i^2   \rightarrow a_i^4\,, \quad  \eta \rightarrow \tau
  \end{equation}
  in the latter.
- As a consequence, the solutions for the in and out modes, and also the Bogolubov coefficents, may be found 
+ As a consequence, the solutions for the in and out modes, and also the Bogoliubov coefficents, may be found 
  from those in Sect.~\ref{sec:BD} by this substitution, except here there will be no overall factors of $a_i$.
- Now the Bogolubov coefficents are given by Eqs.~\eqref{eq:alpha-BD} and \eqref{eq:beta-BD} without the
+ Now the Bogoliubov coefficents are given by Eqs.~\eqref{eq:alpha-BD} and \eqref{eq:beta-BD} without the
  leading $1/a_i$ factor, and where now
  \begin{equation}
  \omega_{in} = k\, a_i^2\,,  \quad \omega_{out} = k\,,
@@ -745,7 +748,7 @@ may iterate this integral equation to lowest order by replacing
 $\chi_k(\eta')$ by $\chi_k^{(in)}(\eta')$ in the integrand. If we
 compare the resulting formula in the limit $\eta \rightarrow \infty$  with 
 the right-hand side of Eq.~\eqref{eq:chi-alphabeta},  
-the Bogolubov coefficients may be read off:
+the Bogoliubov coefficients may be read off:
 \begin{equation}
 \alpha_k \approx   \frac{a_f}{a_i}\,  \left[1 - \frac{i}{2\omega_{in}} \, \int_{-\infty}^\infty
              U(\eta)\, d\eta \right]\,,
@@ -835,7 +838,7 @@ Lankinen and Vilia~\cite{Lankinen2017}.
 
 Note that this review has focussed on the quantum creation of bosons, especially scalar particles.
 The creation of fermions in an expanding universe was treated by Parker~\cite{Parker71}, where
-anti-commutation relations replace the commutation relation used here in Sec.~\ref{sec:Bogolubov}.
+anti-commutation relations replace the commutation relation used here in Sec.~\ref{sec:Bogoliubov}.
 In general, one can expect the creation rate of fermions to be somewhat less than than for bosons
 of similar mass and coupling to curvature. This is due to the effects of the exclusion principle for
 fermions.
@@ -907,7 +910,7 @@ and hence no particle creation occurs and particle number remains constant. Thus
 definition of particle number. This approach has been used by several authors~\cite{Woodhouse76,Berger78,Azuma83,Winitzki05,Parker12,Agullo15}.
 
 Another attempt to give a local definition of particle number is the Hamiltonian diagonalization approach of Grib and Mamaev~\cite{Grib69}. Here one
-defines a Hamiltonian, diagonalizes it by a Bogolubov tranformation, and defines particles in the new Fock space after diagonalization. The physical
+defines a Hamiltonian, diagonalizes it by a Bogoliubov tranformation, and defines particles in the new Fock space after diagonalization. The physical
 motivation for this definition is not clear, and it has been critically discussed by Fulling~\cite{Fulling79}, who argues that the choice of Hamiltonian
 is ambiguous. However, Fulling also notes that in some cases Hamiltonian diagonalization is essentially equivalent to the WKB approach. 
 
@@ -921,7 +924,7 @@ Several other criteria for defining particular classes of quantum states have be
 \label{sec:state}
 
 
-Let us return to the Bogolubov transformation, Eq.~\eqref{eq:Bogo1} for particle creation in a spatially flat universe. In
+Let us return to the Bogoliubov transformation, Eq.~\eqref{eq:Bogo1} for particle creation in a spatially flat universe. In
 this case, we have 
 \begin{equation}
 a_{\bf k}= \alpha _{k}^* b_{\bf k}     - \beta _{k}^*  b_{\bf -k}^\dagger \,,
@@ -1184,7 +1187,7 @@ matching two different solutions of Eq.~\eqref{eq:chieq} with different choices 
 The resulting mode in the radiation dominated phase  is interpreted as describing a classical, stochastic gravity wave.
 A similar procedure was used in Refs.~\cite{RSV82,FP83,AW84a,AW84b}, where estimates of the resulting anisotropy
 of the CMB were given. Later Abbott and Harari~\cite{AH86} and Allen~\cite{A88} gave more rigorous treatments using
-the Bogolubov coefficient approach.
+the Bogoliubov coefficient approach.
 
 After their creation, the gravitons are in a squeezed vacuum state of the form of that found in Sec.~\ref{sec:state}. At
 this point, they are far from describing a classical gravity wave, as the expectation values of the metric and curvature
@@ -1371,7 +1374,7 @@ constant, and $E$ is the magnitude of the electric field in Lorentz-Heaviside un
 This is analogous to the suppression of the creation of massive particles by the cosmological expansion, as illustrated in Eq.~\eqref{eq:N-BD3},
 for example.  In the electromagnetic case, this leads to a critical electric field, $E_{cr} = m^2/e \approx  1.3 \times 10^{18} V/m$, above which the spontaneous 
 electron positron pair  creation rate becomes large. This type of particle creation may be derived by a Boglubov coefficient approach, of the type outlined in
-Sect.~\ref{sec:Bogolubov}~\cite{Grib94}. The Schwinger effect has not yet been observed in the laboratory. However, there may be greater chance of
+Sect.~\ref{sec:Bogoliubov}~\cite{Grib94}. The Schwinger effect has not yet been observed in the laboratory. However, there may be greater chance of
 observing pair  creation in a time dependent laser field than in a static electric field~\cite{Dunne09}.
 
 One can understand the above expression for $E_{cr}$ from a simple heuristic argument. The work on by an electric field $E$ moving a charge
@@ -1577,8 +1580,8 @@ spacetime. A quantum field theory requires both a set of local field operators, 
 is especially subtle in an expanding universe, where no unique local definition of particles, and hence of the vacuum state exists. We have dealt with 
 this ambiguity by use of quasilocal definitions in regions where the expansion rate is sufficiently small, and by asymptotic definitions when
 available. However, it is this ambiguity which leads to the phenomenon of quantum particle creation. The definition of a particle in an initial region
-can differ from that in a final region, so a quantum state without particles initially may later contain particles. This was discussed in Sec.~\ref{sec:Bogolubov}
-using the formalism of Bogolubov transformations. The particle creation is also due to the non-conservation of field energy in a time-dependent
+can differ from that in a final region, so a quantum state without particles initially may later contain particles. This was discussed in Sec.~\ref{sec:Bogoliubov}
+using the formalism of Bogoliubov transformations. The particle creation is also due to the non-conservation of field energy in a time-dependent
 spacetime, but while the creation is occurring only approximate definitions of local particle number are meaningful. The inherent ambiguity of the
 concept of particle number in a time dependent situation has observable consequences, as illustrated by the creation of squeezed states described
 in Sec.~\ref{sec:squeeze}.
@@ -2048,7 +2051,7 @@ Their form in the future is
 \end{equation}
 where the coefficients $\alpha_k$ and $\beta_k$ are determined by solving 
 Eq. (\ref{eq:chieq}) for a given $a(\eta)$. 
-They are related to the Bogolubov coefficients
+They are related to the Bogoliubov coefficients
 by $\alpha_{\bf k k'} = \alpha_k \delta_{\bf k k'}$ and
 $\beta_{\bf k k'} = \beta_k \delta_{\bf k, -k'}$. Thus the number density 
 of created particles per unit proper volume  is given at late times by
