--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-08-04 11:17:30 -0400 
+%% Created for Pete Su at 2024-08-09 14:24:46 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Ford2021,
+	author = {Ford, L H},
+	date-added = {2024-08-09 14:24:38 -0400},
+	date-modified = {2024-08-09 14:24:38 -0400},
+	doi = {10.1088/1361-6633/ac1b23},
+	issn = {1361-6633},
+	journal = {Rep. Prog. Phys.},
+	note = {\href{http://arxiv.org/abs/2112.02444v1}{arxiv:2112.02444v1}},
+	number = {11},
+	pages = {116901},
+	publisher = {IOP Publishing},
+	title = {Cosmological particle production: a review},
+	url = {http://dx.doi.org/10.1088/1361-6633/ac1b23},
+	volume = {84},
+	year = {2021},
+	bdsk-url-1 = {http://dx.doi.org/10.1088/1361-6633/ac1b23}}
 
 @article{Barman2018,
 	author = {Barman, Subhajit and Hossain, Golam Mortuza and Singha, Chiranjeeb},
