--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-08-09 14:53:01 -0400 
+%% Created for Pete Su at 2024-08-10 07:33:12 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Fulling1977,
+	author = {Fulling, S A},
+	date-added = {2024-08-10 07:33:07 -0400},
+	date-modified = {2024-08-10 07:33:07 -0400},
+	doi = {10.1088/0305-4470/10/6/014},
+	issn = {1361-6447},
+	journal = {Journal of Physics A: Mathematical and General},
+	number = {6},
+	pages = {917--951},
+	publisher = {IOP Publishing},
+	title = {Alternative vacuum states in static space-times with horizons},
+	url = {http://dx.doi.org/10.1088/0305-4470/10/6/014},
+	volume = {10},
+	year = {1977},
+	bdsk-url-1 = {http://dx.doi.org/10.1088/0305-4470/10/6/014}}
 
 @article{Parker1968,
 	author = {Parker, L.},
@@ -4576,10 +4592,10 @@
 
 @book{Christensen1984,
 	date-added = {2023-08-05 19:59:51 -0400},
-	date-modified = {2023-08-05 20:00:24 -0400},
+	date-modified = {2024-08-10 07:31:04 -0400},
 	editor = {Christensen, Steven M},
 	publisher = {Adam Hilger Ltd, Bristol},
-	title = {Quantum theory of gravity},
+	title = {{Quantum theory of gravity: Essays in Honor of the 60th Birthday of Bryce S. DeWitt}},
 	year = {1984}}
 
 @article{Charles2020,
