--- a/winograd-1990/thinking-machines.tex
+++ b/winograd-1990/thinking-machines.tex
@@ -66,15 +66,15 @@ The electronic computer gave new embodiment to mechanical rationality, making it
 (The Limits of Growth).}
 Although these techniques work well in specialized cases (such as scheduling delivery vehicles or controlling the operations in a refinery), they proved inadequate for the broader problems to which they were applied. The ``mathematization'' of experience required simplifications that made the computer results --- accurate as they might be with respect to the models meaningless in the world.
 
-Although there are still attempts to quantify matters of social import (for example in applying mathematical risk analysis to decisions about nuclear power), there is an overall disillusionment with the potential for adequately reducing human concerns to a precise set of numbers and equations (see for example, Davis and Hersh, 1986). The developers of artificial intelligence have rejected traditional mathematical modeling in favor of an emphasis on symbolic --- rather than numerical --- formalisms. Leibniz's ``Let us calculate'' is taken in Hobbes' broader sense to include not just numbers but also ``affirmations'' and ``syllogisms.''
+Although there are still attempts to quantify matters of social import (for example in applying mathematical risk analysis to decisions about nuclear power), there is an overall disillusionment with the potential for adequately reducing human concerns to a precise set of numbers and equations (see for example, \cite{davis1986}). The developers of artificial intelligence have rejected traditional mathematical modeling in favor of an emphasis on symbolic --- rather than numerical --- formalisms. Leibniz's ``Let us calculate'' is taken in Hobbes' broader sense to include not just numbers but also ``affirmations'' and ``syllogisms.''
 
 \section{The promise of artificial intelligence}
 
-Attempts to duplicate formal non-numerical reasoning on a machine date back to the earliest computers, but the endeavor began in earnest with the AI projects of the mid 1950s (see Gardner, 1985, for an overview of the historical perspective). The goals were ambitious: to fully duplicate the human capacities of thought and language on a digital computer. Early claims that a complete theory of intelligence would be achieved within a few decades have long since been abandoned, but the research has not diminished. For example, a recent book by Minsky (one of the founders of AI) offers computational models for phenomena as diverse as conflict, pain and pleasure, the self, the soul, consciousness, confusion, genius, infant emotion, foreign accents, and freedom of will (these are among the section headings in \parencite{minsky1986}).
+Attempts to duplicate formal non-numerical reasoning on a machine date back to the earliest computers, but the endeavor began in earnest with the AI projects of the mid 1950s (see \cite{gardner1985}, for an overview of the historical perspective). The goals were ambitious: to fully duplicate the human capacities of thought and language on a digital computer. Early claims that a complete theory of intelligence would be achieved within a few decades have long since been abandoned, but the research has not diminished. For example, a recent book by Minsky (one of the founders of AI) offers computational models for phenomena as diverse as conflict, pain and pleasure, the self, the soul, consciousness, confusion, genius, infant emotion, foreign accents, and freedom of will (these are among the section headings in \parencite{minsky1986}).
 
 In building models of mind, there are two distinct but complementary goals. On the one hand is the quest to explain human mental processes as thoroughly and unambiguously as physics explains the functioning of ordinary mechanical devices. On the other hand is the drive to create intelligent tools --- machines that apply intelligence to serve some purpose, regardless of how closely they mimic the details of human intelligence. At times these two enterprises have gone hand in hand, at others they have led down separate paths.
 
-Researchers such as Newell and Simon (two other founding fathers of artificial intelligence) have sought precise and scientifically testable theories of more modest scope than Minsky suggests. In reducing the study of mind to the formulation of rule-governed operations on symbol systems, they focus on detailed aspects of cognitive functioning, using empirical measures such as memory capacity and reaction time. They hypothesize specific ``mental architectures'' and compare their detailed performance with human experimental results (e.g., Newell and Simon, 1972; Laird et al., 1986). It is difficult to measure the success of this enterprise. The tasks that have been examined (such as puzzle-solving and the ability to remember abbreviations for computer commands) do not even begin to approach a representative sample of human cognitive abilities, for reasons we will examine below.
+Researchers such as Newell and Simon (two other founding fathers of artificial intelligence) have sought precise and scientifically testable theories of more modest scope than Minsky suggests. In reducing the study of mind to the formulation of rule-governed operations on symbol systems, they focus on detailed aspects of cognitive functioning, using empirical measures such as memory capacity and reaction time. They hypothesize specific ``mental architectures'' and compare their detailed performance with human experimental results (e.g., \cite{newell1972}; \cite{laird1986}). It is difficult to measure the success of this enterprise. The tasks that have been examined (such as puzzle-solving and the ability to remember abbreviations for computer commands) do not even begin to approach a representative sample of human cognitive abilities, for reasons we will examine below.
 
 On the other side lies the goal of practical system building. In the late 1970s, the field of artificial intelligence was drastically affected by the continuing precipitous drop in computing costs. Techniques that previously demanded highly specialized and costly equipment came within the reach of commercial users. A new term, ``knowledge engineering,'' was coined to indicate a shift to the pragmatic interests of the engineer, rather than the scientist's search for theoretical knowledge.
 
@@ -108,7 +108,7 @@ If the sulfate ion test is positive, the spill material is sulfuric acid. If the
 These systems do not attempt to explain human intelligence in detail, but are justified in terms of their practical applications, for which extravagant claims have been made.
 
 \begin{quote}
-Humans need expert systems, but the problem is they don't often believe it... At least one high-performance medical diagnosis program sits unused because the physicians it was designed to assist didn't perceive that they needed such assistance; they were wrong, but that doesn't matter...There's a manifest destiny in information processing, in knowledge systems, a continent we shall all spread out upon sooner or later ({\it Feigenbaum and McCorduck, 1983)}.
+Humans need expert systems, but the problem is they don't often believe it... At least one high-performance medical diagnosis program sits unused because the physicians it was designed to assist didn't perceive that they needed such assistance; they were wrong, but that doesn't matter...There's a manifest destiny in information processing, in knowledge systems, a continent we shall all spread out upon sooner or later ({\it \cite{mccorduck1983})}.
 \end{quote}
 
 The high hopes and ambitious aspirations of knowledge engineering are well-documented, and the claims are often taken at face value, even in serious intellectual discussions. In fact, although a few widely-known systems illustrate specific potentials, the successes are still isolated pinnacles in a landscape of research prototypes, feasibility studies, and preliminary versions. It is difficult to get a clear picture of what has been accomplished and to make a realistic assessment of what is yet to come. We need to begin by examining the difficulties with the fundamental methods these programs employ.
@@ -119,7 +119,7 @@ The high hopes and ambitious aspirations of knowledge engineering are well-docum
 Artificial intelligence draws its appeal from the same ideas of mechanized reasoning that attracted Descartes, Leibniz, and Hobbes, but it differs from the more classical forms of rationalism in a critical way. Descartes wanted his method to stand on a bedrock of clear and self-evident truths. Logical empiricism sought truth through observation and the refinement of formal theories that predicted experimental results. Artificial intelligence has abandoned the quest for certainty and truth. The new patchwork rationalism is built upon mounds of ``micro-truths'' gleaned through common sense introspection, ad hoc programming and so-called ``knowledge acquisition'' techniques for interviewing experts. The grounding on this shifting sand is pragmatic in the crude sense~---~``If it seems to be working, it's right.'' The resulting patchwork defies logic. Minsky observes:
 
 \bq
-For generations, scientists and philosophers have tried to explain ordinary reasoning in terms of logical principles --- with virtually no success. I suspect this enterprise failed because it was looking in the wrong direction: common sense works so well not because it is an approximation of logic; logic is only a small part of our great accumulation of different, useful ways to chain things together. ({\it Minsky, 1986})
+For generations, scientists and philosophers have tried to explain ordinary reasoning in terms of logical principles --- with virtually no success. I suspect this enterprise failed because it was looking in the wrong direction: common sense works so well not because it is an approximation of logic; logic is only a small part of our great accumulation of different, useful ways to chain things together. ({\it \cite{minsky1986}})
 \eq
 
 In the days before computing, ``ways to chain things together'' would have remained a vague metaphor. But the computer can perform arbitrary symbol manipulations that we interpret as having logical import. It is easy to build a program to which we enter ``Most birds can fly'' and ``Tweety is a bird'' and which then produces ``Tweety can fly'' according to a regular (although logically questionable) rule. The artificial intelligence method¬ ology does not demand a logically correct answer, but one that works sufficiently often to be ``heuristically adequate.''
@@ -141,7 +141,7 @@ kind of ``problem solving.''
 The fundamental principle is the identification of intelligence with the functioning of a rule-governed symbol-manipulating device. It has been most explicitly stated by Newell and Simon:
 
 \bq
-A physical symbol system has the necessary and sufficient means for general intelligent action... By ``general intelligent action''we wish to indicate the same scope of intelligence we see in human action: that in any real situation behavior appropriate to the ends of the system and adaptive to the demands of the environment can occur, within some limits of speed and complexity. ({\it Newell and Simon, 1976})
+A physical symbol system has the necessary and sufficient means for general intelligent action... By ``general intelligent action''we wish to indicate the same scope of intelligence we see in human action: that in any real situation behavior appropriate to the ends of the system and adaptive to the demands of the environment can occur, within some limits of speed and complexity. ({\it \cite{newell1976}})
 \eq
 
 This `physical symbol system hypothesis'' presupposes materialism: the claim that all of the observed properties of intelligent beings can ultimately be explained in terms of lawful physical processes. It adds the claim that these processes can be described at a level of abstraction in which all relevant aspects of physical state can be understood as the encoding of symbol structures and that the activities can be adequately characterized as systematic application of symbol manipulation rules.
@@ -150,7 +150,7 @@ The essential link is {\it representation} --- the encoding of the relevant aspe
 An intelligent agent is embedded in a {\it task environment};  a task statement
 enters via a perceptual component and is encoded in an initial
 representation. Whence starts a cycle of activity in which a {\it recognition} occurs... of a method to use to attempt the problem. The method draws upon a memory of {\it general world knowledge}...
-It is clear to us all what {\it representation} is in this picture. It is the data structures that hold the problem and will be processed into a form that makes the solution available. Additionally, it is the data structures that hold the world knowledge and will be processed to acquire parts of the solution or to obtain guidance in constructing it. [emphasis in original] ({\it Newell, 1982})
+It is clear to us all what {\it representation} is in this picture. It is the data structures that hold the problem and will be processed into a form that makes the solution available. Additionally, it is the data structures that hold the world knowledge and will be processed to acquire parts of the solution or to obtain guidance in constructing it. [emphasis in original] ({\it \cite{newell1982}})
 \eq
 
 Complete and systematic symbolic representation is crucial to the
@@ -163,7 +163,7 @@ Newell's and Simon's physical symbol systems aspire not to an idealized rational
 
 As artificial intelligence developed in the 1950s and 1960s, this methodology was formalized in the techniques of ``heuristic search.''
 
-The task that a symbol system is faced with, then, when it is presented with a problem and a problem space, is to use its limited processing resources to generate possible solutions, one after another, until it finds one that satisfies the problem-defining test (Newell and Simon, 1976).
+The task that a symbol system is faced with, then, when it is presented with a problem and a problem space, is to use its limited processing resources to generate possible solutions, one after another, until it finds one that satisfies the problem-defining test (\cite{newell1976}).
 
 The ``problem space'' is a formal structure that can be thought of as enumerating the results of all possible sequences of actions that might be taken by the program. In a program for playing chess, for example, the problem space is generated by the possible sequences of moves. The number of possibilities grows exponentially with the number of moves, and is beyond practical reach after a small number. However, one can limit search in this space by following heuristics that operate on the basis of local cues (``If one of your pieces could be taken on the opponent's next move, try moving it ...''). There have been a number of variations on this basic theme, all of which are based on explicit representations of the problem space and the heuristics for operating within it.
 
@@ -190,7 +190,7 @@ This {\it ad hoc} nature of the logic applies equally to the cognitive models of
 Minsky makes explicit this assumption that intelligence will emerge from computational interactions among a plethora of small pieces.
 
 \bq
-I'll call `Society of Mind' this scheme in which each mind is made of many smaller processes. The smaller processes we'll call agents. Each mental agent by itself can only do some simple thing that needs no mind or thought at all. Yet when we join these agents in societies --- in certain very special ways --- this leads to true intelligence. ({\it Minsky, 1986})
+I'll call `Society of Mind' this scheme in which each mind is made of many smaller processes. The smaller processes we'll call agents. Each mental agent by itself can only do some simple thing that needs no mind or thought at all. Yet when we join these agents in societies --- in certain very special ways --- this leads to true intelligence. ({\cite{minsky1986}})
 \eq
 
 Minsky's theory is quite different from Newell's cognitive architectures. In place of finely-tuned clockworks of precise production rules we find an impressionistic pastiche of metaphors. Minsky illustrates his view in a simple `micro-world' of toy blocks, populated by agents such as BUILDER (which stacks up the blocks), ADD (which adds a single block to a stack), and the like:
@@ -396,8 +396,6 @@ But these projections are like the geometric projection of a three- dimensional 
 
 \bigskip
 \noindent
-{\it We could extract the references here, but that would be really painful -- psu}.
-
 
 \printbibliography
 
