--- a/winograd-1990/thinking-machines.bib
+++ b/winograd-1990/thinking-machines.bib
@@ -16,7 +16,7 @@
   publisher={MIT Press}
 }
 
-@book{winograd1986,
+@book{winograd-flores-1986,
   title={Understanding Computers and Cognition: A New Foundation for Design},
   author={Winograd, T. and Flores, F.},
   year={1986},
@@ -151,4 +151,58 @@
   series={Economy and Society: An Outline of Interpretive Sociology},
   year={1968},
   publisher={University of California Press}
+}
+
+@book{march-and-simon1958,
+  author={March, James G. and Herbert A. Simon},
+  year={1958},
+  title={Organizations},
+  publisher={New York: Wiley},
+}
+
+@misc{turkle1987,
+  title={A new romantic reaction: the computer as precipitant of anti-mechanistic definitions of the human, paper given at conference on Humans, Animals, Machines: Boundaries and Projections},
+  author={Turkle, Sherry},
+  year={1987},
+  publisher={Stanford University, April}
+}
+
+@misc{dreyfus1965,
+  title={Alchemy and artificial intelligence},
+  author={Dreyfus, Hubert L},
+  year={1965},
+  publisher={Rand Corporation Santa Monica, CA}
+}
+
+@article{jurgen1979,
+  title={Communication and the Evolution of Society {(translated by Thomas McCarthy)}},
+  author={J{\"u}rgen Habermas},
+  journal={Boston: Beacon},
+  year={1979}
+}
+
+@article{roszak1986,
+  title={The cult of information: the folklore of computers and the true art of thinking, New York},
+  author={Roszak, Thodoro},
+  journal={Pantheon},
+  volume={88},
+  year={1986}
+}
+
+@book{flores1982,
+  title={Management and Communication in the Office of the Future, {PhD Dissertation}},
+  author={Flores, Fernando},
+  year={1982},
+  publisher={University of California, Berkeley}
+}
+
+@article{winograd1988,
+  title={A language/action perspective on the design of cooperative work},
+  author={Winograd, Terry},
+  journal={ACM SIGCHI Bulletin},
+  volume={20},
+  number={1},
+  pages={79},
+  year={1988},
+  publisher={ACM New York, NY, USA}
 }
