--- a/bib.bib
+++ b/bib.bib
@@ -1,22 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-08-18 07:54:35 -0400 
+%% Created for Pete Su at 2024-08-18 08:04:57 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@inbook{Bell2005,
+@incollection{Bell2005,
 	author = {John L. Bell},
-	chapter = {{The Development of Categorical Logic}},
+	booktitle = {Handbook of Philosophical Logic},
 	date-added = {2024-08-18 07:39:51 -0400},
-	date-modified = {2024-08-18 07:44:33 -0400},
+	date-modified = {2024-08-18 08:00:53 -0400},
 	editor = {Gabbay, D and Guenthner, F},
 	pages = {279--361},
 	publisher = {Springer},
-	title = {Handbook of Philosophical Logic},
+	title = {{The Development of Categorical Logic}},
 	volume = {12},
 	year = {2005}}
 
@@ -5902,7 +5902,7 @@
 	title = {{Completely Discretized, Finite Quantum Mechanics}},
 	year = {2023}}
 
-@book{Schwindt_2016,
+@book{Schwindt2016,
 	author = {Jan-Markus Schwindt},
 	date-added = {2023-07-29 11:42:27 -0400},
 	date-modified = {2023-07-29 11:42:27 -0400},
@@ -6431,7 +6431,7 @@
 	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-662-04750-7},
 	bdsk-url-2 = {https://doi.org/10.1007/978-3-662-04750-7}}
 
-@article{Maclay_2020,
+@article{Maclay2020,
 	author = {G. Jordan Maclay},
 	date-added = {2023-07-28 09:02:22 -0400},
 	date-modified = {2023-07-28 09:02:22 -0400},
@@ -6512,7 +6512,7 @@
 	volume = {3},
 	year = {1981}}
 
-@article{Kocherginsky_2021,
+@article{Kocherginsky2021,
 	author = {Nikolai M. Kocherginsky},
 	date-added = {2023-07-27 18:00:03 -0400},
 	date-modified = {2023-07-27 18:00:03 -0400},
@@ -6591,7 +6591,7 @@
 	bdsk-url-1 = {https://doi.org/10.1007%2Fbf01225149},
 	bdsk-url-2 = {https://doi.org/10.1007/bf01225149}}
 
-@article{Olkhov_2007,
+@article{Olkhov2007,
 	author = {O A Olkhov},
 	date-added = {2023-07-27 14:54:03 -0400},
 	date-modified = {2023-07-27 14:54:03 -0400},
@@ -6606,7 +6606,7 @@
 	bdsk-url-1 = {https://doi.org/10.1088%2F1742-6596%2F67%2F1%2F012037},
 	bdsk-url-2 = {https://doi.org/10.1088/1742-6596/67/1/012037}}
 
-@article{Kaloyerou_2019,
+@article{Kaloyerou2019,
 	author = {P N Kaloyerou and A M Ilunga},
 	date-added = {2023-07-27 07:44:32 -0400},
 	date-modified = {2023-07-27 07:45:00 -0400},
@@ -6793,7 +6793,7 @@
 	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-642-61458-3},
 	bdsk-url-2 = {https://doi.org/10.1007/978-3-642-61458-3}}
 
-@book{Gustafson_2011,
+@book{Gustafson2011,
 	author = {Stephen J. Gustafson and Israel Michael Sigal},
 	date-added = {2023-07-26 20:34:54 -0400},
 	date-modified = {2023-07-26 20:34:54 -0400},
@@ -6850,7 +6850,7 @@
 	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep09%282020%29002},
 	bdsk-url-2 = {https://doi.org/10.1007/jhep09(2020)002}}
 
-@article{Giacosa_2017,
+@article{Giacosa2017,
 	author = {F. Giacosa},
 	date-added = {2023-07-26 07:27:14 -0400},
 	date-modified = {2023-07-26 07:27:41 -0400},
@@ -6896,7 +6896,7 @@
 	bdsk-url-1 = {https://doi.org/10.1088%2F1367-2630%2Faa5dea},
 	bdsk-url-2 = {https://doi.org/10.1088/1367-2630/aa5dea}}
 
-@article{Galvez_2005,
+@article{Galvez2005,
 	author = {E. J. Galvez and Charles H. Holbrow and M. J. Pysher and J. W. Martin and N. Courtemanche and L. Heilig and J. Spencer},
 	date-added = {2023-07-26 07:08:54 -0400},
 	date-modified = {2023-07-26 07:08:59 -0400},
@@ -6912,7 +6912,7 @@
 	bdsk-url-1 = {https://doi.org/10.1119%2F1.1796811},
 	bdsk-url-2 = {https://doi.org/10.1119/1.1796811}}
 
-@article{Frabboni_2007,
+@article{Frabboni2007,
 	author = {S. Frabboni and G. C. Gazzadi and G. Pozzi},
 	date-added = {2023-07-26 07:08:22 -0400},
 	date-modified = {2023-07-26 07:08:27 -0400},
@@ -6974,7 +6974,7 @@
 	bdsk-url-1 = {https://doi.org/10.1007%2Fbf01647091},
 	bdsk-url-2 = {https://doi.org/10.1007/bf01647091}}
 
-@article{Field_2006,
+@article{Field2006,
 	author = {J.H. Field},
 	date-added = {2023-07-25 07:04:58 -0400},
 	date-modified = {2023-07-25 07:05:05 -0400},
@@ -7040,7 +7040,7 @@
 	title = {QED: The strange theory of light and matter},
 	year = {2006}}
 
-@article{Ferrari_2010,
+@article{Ferrari2010,
 	author = {Christian Ferrari and Bernd Braunecker},
 	date-added = {2023-07-24 20:01:33 -0400},
 	date-modified = {2023-07-24 20:02:10 -0400},
@@ -7248,7 +7248,7 @@
 	bdsk-url-1 = {https://doi.org/10.1098%2Frspa.1927.0012},
 	bdsk-url-2 = {https://doi.org/10.1098/rspa.1927.0012}}
 
-@book{Gottfried_2003,
+@book{Gottfried2003,
 	author = {Kurt Gottfried and Tung-Mow Yan},
 	date-added = {2023-07-23 16:24:06 -0400},
 	date-modified = {2023-07-23 16:24:06 -0400},
@@ -7494,7 +7494,7 @@
 	year = {1951},
 	bdsk-url-1 = {https://books.google.com/books?id=-vhCqN2twGQC}}
 
-@article{Bocchieri_1978,
+@article{Bocchieri1978,
 	author = {P. Bocchieri and A. Loinger},
 	date-added = {2023-07-23 08:13:08 -0400},
 	date-modified = {2023-07-23 08:13:12 -0400},
@@ -7792,7 +7792,7 @@
 	title = {Geometrical formulation of quantum mechanics},
 	year = {1999}}
 
-@article{Fonda_1978,
+@article{Fonda1978,
 	author = {L Fonda and G C Ghirardi and A Rimini},
 	date-added = {2023-07-21 18:29:14 -0400},
 	date-modified = {2023-07-21 18:29:24 -0400},
@@ -8383,7 +8383,7 @@
 	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-642-62029-4},
 	bdsk-url-2 = {https://doi.org/10.1007/978-3-642-62029-4}}
 
-@book{MacLane_1994,
+@book{MacLane1994,
 	author = {Saunders Mac Lane and Ieke Moerdijk},
 	date-added = {2023-07-18 07:15:51 -0400},
 	date-modified = {2023-07-18 07:15:58 -0400},
@@ -8619,7 +8619,7 @@
 	bdsk-url-1 = {https://doi.org/10.1016%2Fs0049-237x%2898%29x8028-6},
 	bdsk-url-2 = {https://doi.org/10.1016/s0049-237x(98)x8028-6}}
 
-@incollection{Groth_2020,
+@incollection{Groth2020,
 	author = {Moritz Groth},
 	booktitle = {Handbook of Homotopy Theory},
 	date-added = {2023-07-17 07:24:14 -0400},
@@ -8634,7 +8634,7 @@
 	bdsk-url-1 = {https://doi.org/10.1201%2F9781351251624-14},
 	bdsk-url-2 = {https://doi.org/10.1201/9781351251624-14}}
 
-@book{Goerss_1999,
+@book{Goerss1999,
 	author = {Paul G. Goerss and John F. Jardine},
 	date-added = {2023-07-17 07:22:02 -0400},
 	date-modified = {2023-07-17 07:22:44 -0400},
@@ -11906,18 +11906,18 @@ horizon.},
 	volume = {17},
 	year = {1967}}
 
-@inbook{Kochen1990-Reprint,
+@incollection{Kochen1990-Reprint,
 	abstract = {Forty years after the advent of quantum mechanics the problem of hidden variables, that is, the possibility of imbedding quantum theory into a classical theory, remains a controversial and obscure subject. Whereas to most physicists the possibility of a classical reinterpretation of quantum mechanics remains remote and perhaps irrelevant to current problems, a minority have kept the issue alive throughout this period. (See Freistadt [5] for a review of the problem and a comprehensive bibliography up to 1957.) As far as results are concerned there are on the one hand purported proofs of the non-existence of hidden variables, most notably von Neumann's proof, and on the other, various attempts to introduce hidden variables such as de Broglie [4] and Bohm [1] and [2]. One of the difficulties in evaluating these contradictory results is that no exact mathematical criterion is given to enable one to judge the degree of success of these proposals.},
 	address = {Basel},
 	author = {Kochen, Simon and Specker, E. P.},
 	booktitle = {Ernst Specker Selecta},
 	date-added = {2019-02-18 12:31:39 +0000},
-	date-modified = {2019-02-18 12:34:06 +0000},
+	date-modified = {2024-08-18 08:03:52 -0400},
 	doi = {10.1007/978-3-0348-9259-9_21},
 	editor = {J{\"a}ger, Gerhard and L{\"a}uchli, Hans and Scarpellini, Bruno and Strassen, Volker},
 	isbn = {978-3-0348-9259-9},
 	pages = {235--263},
-	publisher = {Birkh{\"a}user Basel},
+	publisher = {Birkh{\"a}user},
 	title = {The Problem of Hidden Variables in Quantum Mechanics},
 	url = {https://doi.org/10.1007/978-3-0348-9259-9_21},
 	year = {1990},
@@ -12262,13 +12262,13 @@ horizon.},
 	year = {1980},
 	bdsk-url-1 = {https://doi.org/10.1007/978-1-4757-0671-0}}
 
-@inbook{Milonni1980,
+@incollection{Milonni1980,
 	abstract = {Quantum theory developed from the study of the interaction of light and matter. Around the beginning of this century, experimental physicists reported phenomena that demonstrated the inadequacy of classical physics. Quantum features of the electromagnetic field were first postulated by Planck in 1900 in order to account for the spectrum of blackbody radiation observed by Lummer and Pringsheim. In order to account for the discrete sequence of wavelengths in the spectrum of atomic hydrogen, Bohr in 1913 postulated that the electron could move only in certain stationary orbits; Planck's constant appeared in his theory as the fundamental ``unit of action.'' We are all familiar with these and other inspired guesses which led finally to the birth of quantum mechanics, as we know it, in the years 1925--26. Dirac's paper on the quantum theory of the electromagnetic field appeared in 1927,(1) and by 1930 there was little doubt that the quantum theory of light and matter was vastly superior to classical theory. Born was so impressed by the theory that at the Fifth Solvay Conference in 1927 he remarked, ``We consider that quantum mechanics is a complete theory, and that its fundamental hypotheses, both physical and mathematical, are not susceptible to further modification.''},
 	address = {Boston, MA},
 	author = {Milonni, Peter W.},
 	booktitle = {Foundations of Radiation Theory and Quantum Electrodynamics},
 	date-added = {2019-02-10 03:14:33 +0000},
-	date-modified = {2019-02-10 03:28:33 +0000},
+	date-modified = {2024-08-18 08:04:49 -0400},
 	doi = {10.1007/978-1-4757-0671-0_1},
 	editor = {Barut, A. O.},
 	isbn = {978-1-4757-0671-0},
@@ -12388,7 +12388,7 @@ horizon.},
 	year = {2007},
 	bdsk-url-1 = {https://doi.org/10.1016/B978-044451560-5/50008-7}}
 
-@article{Gottfried_2011,
+@article{Gottfried2011,
 	author = {Kurt Gottfried},
 	date-modified = {2023-07-23 16:22:27 -0400},
 	doi = {10.1119/1.3536639},
