--- a/previewtemplate.tex
+++ b/previewtemplate.tex
@@ -26,6 +26,7 @@
 \begin{document}
 \raggedright
 \nocite{<<CiteKeys>>}   
-\bibliography{<<File>>}   
-\bibliographystyle{/Users/psu/arxiv-psu/habbrv}  
+\bibliography{<<File>>}
+%\bibliographystyle{<<Style>>}     
+\bibliographystyle{/Users/psu/arxiv-psu/psu-acm}  
 \end{document}
