--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,44 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-08-18 08:14:41 -0400 
+%% Created for Pete Su at 2024-08-18 10:28:43 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Bell1986,
+	author = {J. L. Bell},
+	date-added = {2024-08-18 10:28:37 -0400},
+	date-modified = {2024-08-18 10:28:43 -0400},
+	issn = {00397857, 15730964},
+	journal = {Synthese},
+	number = {3},
+	pages = {409--426},
+	publisher = {Springer},
+	title = {From Absolute to Local Mathematics},
+	url = {http://www.jstor.org/stable/20116349},
+	urldate = {2024-08-18},
+	volume = {69},
+	year = {1986},
+	bdsk-url-1 = {http://www.jstor.org/stable/20116349}}
+
+@article{Bell1982,
+	author = {J. L. Bell},
+	date-added = {2024-08-18 10:28:01 -0400},
+	date-modified = {2024-08-18 10:28:17 -0400},
+	issn = {00397857, 15730964},
+	journal = {Synthese},
+	number = {3},
+	pages = {293--337},
+	publisher = {Springer},
+	title = {Categories, Toposes and Sets},
+	url = {http://www.jstor.org/stable/20115748},
+	urldate = {2024-08-18},
+	volume = {51},
+	year = {1982},
+	bdsk-url-1 = {http://www.jstor.org/stable/20115748}}
 
 @incollection{Bell2005,
 	author = {John L. Bell},
