--- a/2409.11946/macros.tex
+++ b/2409.11946/macros.tex
@@ -5,7 +5,7 @@
 
 \newcommand{\psection}[1]{\par\textbf{\textsf{#1}} \newline} % Section in proof
 
-\newcommand{\defemph}[1]{\textbf{\emph{#1}}} % Defined word
+\newcommand{\defemph}[1]{{\emph{#1}}} % Defined word
 
 %%% Theorem-style environments
 
